# EasyBDD

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  .mcpbignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  CRAWLER.md  Dockerfile  Jenkinsfile  Jenkinsfile.branch  Jenkinsfile.create-smoke-run  Jenkinsfile.custom  Jenkinsfile.firmware-wattbox  Jenkinsfile.manual  Jenkinsfile.project  Jenkinsfile.project-59  Jenkinsfile.project-74  Jenkinsfile.project-76  Jenkinsfile.project-77  Jenkinsfile.project-78  Jenkinsfile.project-79  Jenkinsfile.project-80  Jenkinsfile.project-81  Jenkinsfile.testrail-all  Jenkinsfile.testrail-convert  Jenkinsfile.testrail-sync  Makefile  ONBOARDING.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RECORDER_INTEGRATION.md  build_mcpb.py  easy-bdd-1.0.0.mcpb  manifest.json  mypy.ini  pyproject.toml  (+6 more)
.github/: copilot-instructions.md
.github/workflows/: create-smoke-run.yml
archive/: README.md
archive/demos/: run_async_device_tests.py  run_async_device_tests.sh  run_multi_device_tests.py
chrome_extension/: manifest.json
chrome_extension/background/: service_worker.js
chrome_extension/content/: crawler.js  iframe_handler.js  selector_engine.js
chrome_extension/options/: options.html  options.js
chrome_extension/popup/: popup.css  popup.html  popup.js
config/: framework.yaml
config/device_groups/: apc_pdus.yaml  cisco_switches.yaml  hikvision_cameras.yaml
config/device_types/: ip_camera.yaml  network_switch.yaml  power_supply.yaml
config/devices/: apc_pdu_rack1.yaml  araknis_206.yaml  camera_conf_room_01.yaml  cisco_switch_core.yaml  device_template.yaml  generic_switch.yaml  hikvision_camera_01.yaml  industrial_sensor.yaml  pdu_rack_a1.yaml  smart_hub.yaml  switch_core_01.yaml  websocket_device.yaml
docs/: 99_PERCENT_RUNTIME.md  API_REFERENCE.md  AUTOMATIC_TIME_TRACKING_SUMMARY.md  BROWSER_CONFIG.md  CENTRALIZED_VARIABLES.md  CHROME_RECORDER_CONVERSION.md  DEVICE_AGNOSTIC_SETUP.md  EXPORT_RESULTS.md  FEATURE_ROADMAP.md  KATALON_USAGE.md  LIVE_RECORDER.md  LONG_RUNNING_TESTS.md  MODERN_FRONTEND_SUCCESS.md  NEW_FEATURES.md  PLAYWRIGHT_API_INTEGRATION.md  PLAYWRIGHT_RECORDING.md  README.md  SERVER_DEPLOYMENT.md  SYNTAX_CHEATSHEET.md  TEST_BUILDER.md  TEST_BUILDER_QUICKREF.md  TEST_BUILDER_SUMMARY.md  USER_GUIDE.md  WORKSPACE_MANAGEMENT.md  actions.md  advanced.md  api-auth-complete-guide.md  api-authentication.md  assertions.md  atlassian-mcp-setup.md  automatic-time-tracking.md  aws-s3-integration.md  ci-cd-integration.md  conditional-steps.md  data-driven.md  datalake-config.md  datalake-logger.md  dot-notation-actions.md  easy_bdd_framework_comparison.html  easybdd_framework_comparison.html  (+19 more)
easy_bdd/: __init__.py  __main__.py  mcp_server.py
easy_bdd/core/: __init__.py  assertions.py  config.py  connection_pool.py  data_loader.py  datalake_logger.py  enhanced_runner.py  generator.py  html_reporter.py  metrics_api.py  metrics_engine.py  parser.py  recorder_converter.py  run_logger.py  runner.py  security.py  soft_assertions.py  suite_converter.py  testrail_runner.py  testrail_syncer.py  testrail_utils.py  validator.py  variable_manager.py
easy_bdd/crawler/: __init__.py  accessibility_snapshotter.py  ai_client.py  crawl_session.py  crx_converter.py  models.py  page_analyzer.py  playwright_crawler.py  rule_based_analyzer.py  self_healer.py  server.py  site_planner.py  testrail_publisher.py  yaml_writer.py
easy_bdd/services/: api_service.py  aws_service.py  browser_service.py  command_service.py  jsonrpc_service.py  ssh_service.py  telnet_service.py  testrail_service.py  websocket_service.py  wol_service.py
easy_bdd/tools/: live_recorder.py  metrics_cli.py
easy_bdd_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
easybdd/: __init__.py  __main__.py  mcp_server.py
easybdd/core/: assertions.py  config.py  connection_pool.py  datalake_logger.py  enhanced_runner.py  generator.py  html_reporter.py  metrics_api.py  parser.py  recorder_converter.py  retry.py  run_logger.py  runner.py  safe_eval.py  suite_converter.py  testrail_reporter.py  testrail_runner.py  testrail_syncer.py  testrail_utils.py  validator.py  (+3 more)
frontend/: CLAUDE.md  TEST_ERROR_PAGES.md  action_definitions.py  app.py  app_demo.py  bdd_migrator.py  builder_core.py  floci_browser.py  local_builder.py  local_runner.py  mcp_server.py  report_generator.py  report_template.py  requirements.txt  requirements_builder.txt  robot_migrator.py  simple_app.py  simple_app_clean.py  simple_app_clean_backup.py  simple_app_fixed.py  start_builder.py  start_floci_browser.py  start_local_builder.py  start_server.py  start_testrail_builder.py  test_builder_app.py  test_report.html  testrail_builder.py
onboarding/: setup-easybdd-mcp.ps1  setup-easybdd-mcp.sh
scripts/: add_b900_shared_cases.py  create_manual_run_job.py  device_discovery.py  fix_api_urls_106670.py  fix_mybdd_helpers_106670.py  fix_split_vars_106670.py  generate_report_from_json.py  install_floci_browser_service.sh  onboard_device.sh  refactor_yaml_actions.py  reorganize_tests.py  repair_shared_steps_106670.py  verify_wattbox_concurrent_telnet.py
tests/: ovrc_login.yaml
(+176 files in other folders)
