[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-bdd-framework"
version = "1.0.0"
description = "User-friendly BDD testing framework with multi-protocol support"
authors = [
    {name = "Your Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pytest>=7.0.0",
    "pytest-bdd>=6.0.0",
    "pytest-html>=3.0.0",
    "pytest-xdist>=3.0.0",
    "requests>=2.25.0",
    "selenium>=4.0.0",
    "playwright>=1.20.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "jsonschema>=4.0.0",
    "websocket-client>=1.0.0",
    "boto3>=1.20.0",
    "paramiko>=2.8.0",
    "pyserial>=3.5",
    "openpyxl>=3.0.0",
    "pandas>=1.3.0",
    "allure-pytest>=2.9.0",
    "pydantic>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
]

[project.urls]
Homepage = "https://github.com/yourorg/easy-bdd-framework"
"Bug Reports" = "https://github.com/yourorg/easy-bdd-framework/issues"
"Source" = "https://github.com/yourorg/easy-bdd-framework"

[tool.setuptools.packages.find]
where = ["."]
include = ["easy_bdd*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings --html=reports/report.html --self-contained-html"
markers = [
    "browser: Browser automation tests",
    "api: API testing",
    "websocket: WebSocket tests",
    "android: Android device tests",
    "aws: AWS service tests",
    "serial: Serial communication tests",
    "integration: Integration tests",
    "unit: Unit tests",
]